--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -22,7 +21,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "tslint 'src/**/*ts'"
+    "lint": "eslint src --ext=.js,.jsx"
   },
   "eslintConfig": {
     "extends": [
@@ -43,6 +42,6 @@
     ]
   },
   "devDependencies": {
-    "tslint": "^6.1.3"
+    "eslint": "^8.19.0"
   }
 }
